# Vacancies

./: .gitignore  config.py  main.py  pyproject.toml
data/: areas.json  vacancies.json
src/: BaseSaver.py  BaseVacancyAPI.py  Employer.py  HeadHunterAPI.py  JSONSaver.py  Salary.py  Vacancy.py  VacancyAPI.py  api.py  salary.py  savers.py  utils.py  vacancy.py
tests/: conftest.py  test_HeadHunterAPI.py  test_api.py  test_salary.py  test_utils.py  test_vacancy.py
